add fact section

--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,33 @@ main > section{
 #Features{
     color: rgba(255, 144, 14, 1);
 }
+/* fact related styles */
+.fact-card{
+     border: 1px solid rgba(255, 144, 14, 1);
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+
+
+}
+.fact-number{
+    font-size: 2.8125rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 10px;
+}
 /* responsive */
 @media screen and (max-width:576px) {
     .navbar, .nav-links, .teams{
@@ -113,6 +140,9 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+}
+.fact-description{
+    max-width: 540px;
 }
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
