--- a/styles/style.css
+++ b/styles/style.css
@@ -129,21 +129,42 @@ main > section{
     font-size: 1.25rem;
     margin-top: 10px;
 }
+.fact-description{
+    max-width: 540px;
+    margin-bottom: 100px;
+}
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 /* responsive */
 @media screen and (max-width:576px) {
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-img-container{
-        grid-template-columns: repeat(1,1fr);
+    .team-img-container,.fact-container,.sponsor-companies{
+        grid-template-columns: 1fr;
+    }
+    .fact-container,.sponsor-companies{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 20px;
     }
 }
-.fact-description{
-    max-width: 540px;
-}
+
+
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
     .teams{
@@ -151,5 +172,10 @@ main > section{
     }
     .our-features{
         margin: 0 auto;
+    }
+    .sponsor-companies,.fact-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
