--- a/styles/style.css
+++ b/styles/style.css
@@ -147,6 +147,27 @@ main > section{
 .sponsor-companies img{
     filter: grayscale(100%);
 }
+/* feature section */
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid rgba(255, 144, 14, 1);
+    padding-left: 20px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
 /* responsive */
 @media screen and (max-width:576px) {
     .navbar, .nav-links, .teams{
