--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ main > section{
     font-size: 1.125rem;
     font-weight: 500;
 }
-.navbar,.banner{
+.navbar,.banner, .input{
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -163,14 +163,42 @@ main > section{
     margin-bottom: 0px;
 
 }
+#experience-badge{
+    padding:45px 42px ;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+}
 .feature-card{
     padding: 30px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
     margin-bottom: 20px;
 }
+/* footer */
+.footer{
+    justify-content: center;
+    margin-top: 30px;
+}
+.input{
+    width: 1340px;
+    height: 50px;
+   border: none;
+   border-radius: 8px;
+   text-align: center;
+   margin-left: 30px;
+    background-color: rgba(255, 244, 231, 1);
+}
 /* responsive */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams,.features{
         flex-direction: column;
     }
     .team-img-container,.fact-container,.sponsor-companies{
@@ -183,12 +211,16 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top:20px ;
+        margin-left: 20px;
+    }
 }
 
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams,.features{
         flex-direction: column;
     }
     .our-features{
@@ -198,5 +230,9 @@ main > section{
         grid-template-columns: repeat(2,1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top:20px ;
+        margin-left: 20px;
     }
 }
